--- a/projects/VS2019/examples/models_loading_vox.vcxproj
+++ b/projects/VS2019/examples/models_loading_vox.vcxproj
@@ -39,7 +39,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>models_mesh_magicavoxel_loading</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>models_mesh_magicavoxel_loading</ProjectName>
+    <ProjectName>models_loading_vox</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -379,7 +379,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\examples\models\models_magicavoxel_loading.c" />
+    <ClCompile Include="..\..\..\examples\models\models_loading_vox.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
