--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,8 +1,18 @@
 name: Android
 
 on:
+  workflow_dispatch:
   push:
+    workflow_dispatch:
+    paths:
+      - 'src/**'
+      - 'examples/**'
+      - '.github/workflows/android.yml'
   pull_request:
+    paths:
+      - 'src/**'
+      - 'examples/**'
+      - '.github/workflows/android.yml'
   release:
     types: [published]
 
