--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,11 +7,17 @@ on:
       - 'src/**'
       - 'examples/**'
       - '.github/workflows/cmake.yml'
+      - 'CMakeList.txt'
+      - 'CMakeOptions.txt'
+      - 'cmake/**'
   pull_request:
     paths:
       - 'src/**'
       - 'examples/**'
       - '.github/workflows/cmake.yml'
+      - 'CMakeList.txt'
+      - 'CMakeOptions.txt'
+      - 'cmake/**'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
