--- a/examples/Makefile
+++ b/examples/Makefile
@@ -489,7 +489,8 @@ SHADERS = \
     shaders/shaders_spotlight \
     shaders/shaders_hot_reloading \
     shaders/shaders_mesh_instancing \
-    shaders/shaders_multi_sample2d
+    shaders/shaders_multi_sample2d \
+    shaders/shaders_compute_gol
 
 AUDIO = \
     audio/audio_module_playing \
