Updated some scripts paths
NOTE: New raylib release installer uses `w64devkit`, smaller and more updated than regular `mingw64-w64` default project. Paths are updated properly.

--- a/projects/VSCode/.vscode/tasks.json
+++ b/projects/VSCode/.vscode/tasks.json
@@ -14,7 +14,7 @@
                 "OBJS=${fileBasenameNoExtension}.c"
             ],
             "windows": {
-                "command": "C:/raylib/mingw/bin/mingw32-make.exe",
+                "command": "mingw32-make.exe",
                 "args": [
                     "RAYLIB_PATH=C:/raylib/raylib",
                     "PROJECT_NAME=${fileBasenameNoExtension}",
@@ -48,7 +48,7 @@
                 "OBJS=${fileBasenameNoExtension}.c"
             ],
             "windows": {
-                "command": "C:/raylib/mingw/bin/mingw32-make.exe",
+                "command": "mingw32-make.exe",
                 "args": [
                     "RAYLIB_PATH=C:/raylib/raylib",
                     "PROJECT_NAME=${fileBasenameNoExtension}",
